--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
 <html class="no-js" lang="">
 <!--<![endif]-->
 <head>
+   <script type="text/javascript">
+  var host = "sirmelis.com";
+  if ((host == window.location.host) && (window.location.protocol != "https:"))
+   window.location.protocol = "https";
+ </script>
 <meta charset="utf-8">
 <meta name="description" content="">
 <meta name="viewport" content="width=device-width, initial-scale=1">
