--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <link rel="canonical" href="https://sirmelis.com"/>
 <meta name="description" content="">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>SVAJŪNAS ŠIRMELIS</title>
+	<title><strong><b>SVAJŪNAS ŠIRMELIS</b></strong></title>
 <link rel="stylesheet" href="css/bootstrap.min.css">
 <link rel="stylesheet" href="css/jquery.fancybox.css">
 <link rel="stylesheet" href="css/main.css">
