--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <link rel="canonical" href="https://sirmelis.com"/>
 <meta name="description" content="">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-	<title><strong><b>SVAJŪNAS ŠIRMELIS</b></strong></title>
+	<title>SVAJŪNAS ŠIRMELIS - VIDEOGRAPHER</title>
 <link rel="stylesheet" href="css/bootstrap.min.css">
 <link rel="stylesheet" href="css/jquery.fancybox.css">
 <link rel="stylesheet" href="css/main.css">
@@ -30,7 +30,7 @@
   <!-- Navigation Section -->
   <header id="header">
     <div class="header-content clearfix">
-      <a class="logo" href="https://sirmelis.com">SVAJŪNAS ŠIRMELIS</a>
+      <a class="logo" href="https://sirmelis.com"><strong><b>SVAJŪNAS ŠIRMELIS</strong></b></a>
       <nav class="navigation" role="navigation">
         <ul class="primary-nav">
           <li><a href="#introduction">About Me</a></li>
