--- a/index.html
+++ b/index.html
@@ -30,5 +30,5 @@
   <!-- Navigation Section -->
   <header id="header">
     <div class="header-content clearfix">
-      <a class="logo" href="https://sirmelis.com"><strong><b>SVAJŪNAS ŠIRMELIS</strong></b></a>
+      <a class="logo" href="https://sirmelis.com"><strong><b>COMING SOON...</strong></b></a>
 
