Add link preload

--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <title>Svajūnas Širmelis | Videographer</title>
     <meta content="width=device-width, initial-scale=1" name="viewport">
     <meta name="theme-color" content="#1B1B1D">
+
+    <link rel="preload" href="normalize.css" as="style">
+    <link rel="preload" href="webflow.css" as="style">
+    <link rel="preload" href="main.css" as="style">
+    <link rel="preload" href="main.js" as="script">
+
     <!-- <link href="https://cdn.plyr.io/3.4.7/plyr.css" rel="stylesheet" type="text/css"> -->
     <link href="css/normalize.css" rel="stylesheet" type="text/css">
     <link href="css/webflow.css" rel="stylesheet" type="text/css">
