--- a/index.html
+++ b/index.html
@@ -102,45 +102,43 @@
             </div>
             <div data-animation="slide" data-easing="ease-in-out-cubic" data-nav-spacing="6" data-duration="750" data-w-id="ef5aef04-ace6-7302-a606-aa110c091abb" style="opacity:0;-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)" class="slider w-slider">
                 <div class="slider-mask w-slider-mask">
-                    <div data-w-id="ef5aef04-ace6-7302-a606-aa110c091abd" class="slide w-slide">
-  
-                    <div style="padding-top:56.27659574468085%" id="w-node-fe3336b66ffb-3fa2b4da" class="w-video w-embed">
+
+                    <div class="slide w-slide">
+                        <div style="padding-top:56.27659574468085%" id="w-node-fe3336b66ffb-3fa2b4da" class="w-video w-embed">
                             <iframe src="https://player.vimeo.com/video/309971069?color=ffffff&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
                         </div>
-                        
+                    </div>
+
+                    <div data-w-id="ef5aef04-ace6-7302-a606-aa110c091abd" class="slide w-slide">
                         <div style="padding-top:56.27659574468085%" id="w-node-fe3336b66ffb-3fa2b4da" class="w-video w-embed">
                             <iframe src="https://player.vimeo.com/video/307322840?color=ffffff&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
                         </div>
-
                     </div>
-                    <div class="slide w-slide">
 
+                    <div class="slide w-slide">
                         <div style="padding-top:56.27659574468085%" id="w-node-3e30f5026ce8-3fa2b4da" class="w-video w-embed">
                             <iframe src="https://player.vimeo.com/video/299069743?color=ffffff&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
                         </div>
-
                     </div>
-                    <div class="slide w-slide">
 
+                    <div class="slide w-slide">
                         <div style="padding-top:56.27659574468085%" id="w-node-6c23956e9c85-3fa2b4da" class="w-video w-embed">
                             <iframe src="https://player.vimeo.com/video/223337729?color=ffffff&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
                         </div>
-
                     </div>
-                    <div class="slide w-slide">
 
+                    <div class="slide w-slide">
                         <div style="padding-top:56.27659574468085%" id="w-node-6f93189c1a80-3fa2b4da" class="w-video w-embed">
                             <iframe src="https://player.vimeo.com/video/299067428?color=ffffff&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
                         </div>
-
                     </div>
-                    <div class="slide w-slide">
 
+                    <div class="slide w-slide">
                         <div style="padding-top:56.27659574468085%" id="w-node-a5562a75c2ad-3fa2b4da" class="w-video w-embed">
                             <iframe src="https://player.vimeo.com/video/299069356?color=ffffff&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
                         </div>
-
                     </div>
+
                 </div>
                 <div class="slider-arrow arrow-left w-slider-arrow-left"><img src="images/slider-arrow-left-icon.svg" height="12" alt="arrow left icon" /></div>
                 <div class="slider-arrow w-slider-arrow-right"><img src="images/slider-arrow-right-icon.svg" height="12" alt="arrow right icon" /></div>
