--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                         </div>
                     </div>
 
-                    <div data-w-id="ef5aef04-ace6-7302-a606-aa110c091abd" class="slide w-slide">
+                    <div class="slide w-slide">
                         <div style="padding-top:56.27659574468085%" id="w-node-fe3336b66ffb-3fa2b4da" class="w-video w-embed">
                             <iframe src="https://player.vimeo.com/video/307322840?color=ffffff&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
                         </div>
