--- a/index.html
+++ b/index.html
@@ -138,6 +138,12 @@
                             <iframe src="https://player.vimeo.com/video/335945360?color=ffffff&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
                         </div>
                     </div>
+                    
+                       <div class="slide w-slide">
+                        <div style="padding-top:56.27659574468085%" id="w-node-a5562a75c2ad-3fa2b4da" class="w-video w-embed">
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/mSgwNv8HhD0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        </div>
+                    </div>
 
                 </div>
                 <div class="slider-arrow arrow-left w-slider-arrow-left"><img src="images/slider-arrow-left-icon.svg" height="12" alt="arrow left icon" /></div>
