--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Svajūnas Širmelis | Videographer</title>
-    <meta content="Freelance videographer based in Kaunas, Lithuania. Living to create something spectacular that excites and moves audiences to keep their attention to see more." name="description">
-    <meta content="Svajūnas Širmelis | Videographer" property="og:title">
-    <meta content="Freelance videographer based in Kaunas, Lithuania. Living to create something spectacular that excites and moves audiences to keep their attention to see more." property="og:description">
-    <meta content="https://www.sirmelis.com/images/opengraph.png" property="og:image">
+    <title></title>
+    <meta content="" name="description">
+    <meta content="" property="og:title">
+    <meta content="" property="og:description">
+    <meta content="" property="og:image">
     <meta content="summary" name="twitter:card">
     <meta content="width=device-width, initial-scale=1" name="viewport">
     <meta name="theme-color" content="#1B1B1D">
