--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <title></title>
     <meta content="" name="description">
-    <meta content="" property="og:title">
+    <meta content="SIRMELIS" property="og:title">
     <meta content="" property="og:description">
     <meta content="" property="og:image">
     <meta content="summary" name="twitter:card">
