--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 <head>
     <meta charset="utf-8">
     <title></title>
-    <meta content="" name="description">
-    <meta content="SIRMELIS" property="og:title">
-    <meta content="" property="og:description">
+    <meta content="SIRMELIS" name="description">
+    <meta content="" property="og:title">
+    <meta content="Svajūnas Širmelis | Videography" property="og:description">
     <meta content="" property="og:image">
     <meta content="summary" name="twitter:card">
     <meta content="width=device-width, initial-scale=1" name="viewport">
