--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Svajūnas Širmelis | Videography</title>
     <meta content="SIRMELIS" name="description">
     <meta content="" property="og:title">
     <meta content="Svajūnas Širmelis | Videography" property="og:description">
