--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <div class="container">
                 <a href="/" class="logo-link w-nav-brand w--current"><img src="images/svajunas-sirmelis-logo.svg" height="50" alt="svajunas sirmelis logo" /></a>
                 <nav role="navigation" class="w-nav-menu">
-                    <div class="nav-menu-items"><a href="#projects" class="nav-item w-nav-link">PROJECTS</a><a href="#about" class="nav-item w-nav-link">ABOUT</a><a href="#contact" class="nav-item w-nav-link">CONTACT</a>
+                    <div class="nav-menu-items"><a href="#projects" class="nav-item w-nav-link">PROJECTS</a><a href="#contact" class="nav-item w-nav-link">CONTACT</a>
                         <div class="social-buttons">
                             <a href="https://www.facebook.com/svajunas.sirmelis" target="_blank" class="social-button w-inline-block"></a>
                             <a href="https://www.instagram.com/svajis/" target="_blank" class="social-button instagram w-inline-block"></a>
@@ -175,7 +175,7 @@
                         <div data-w-id="5af86387-682d-c89a-ba47-d0408c9b2b37" style="opacity:0;-webkit-transform:translate3d(0, 20PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 20PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 20PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 20PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)" class="contact-text">T. <a href="tel:+37065448057" class="link contact-link">+370 654 48057</a></div>
                         <div data-w-id="b3a0c1d7-745d-970a-744e-028c4ddd57dc" style="opacity:0;-webkit-transform:translate3d(0, 20PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 20PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 20PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 20PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)" class="contact-text email">E. <a href="mailto:svajunas@sirmelis.com" class="link contact-link">svajunas@sirmelis.com</a></div>
                     </div>
-                    <div id="w-node-643b20803253-3fa2b4da"><img src="images/svajunas-sirmelis-logo.svg" height="50" alt="svajunas sirmelis logo" data-w-id="2670c39a-81bb-8d0c-7552-71acaa4d6996" style="opacity:0" /></div>
+                    <div id="w-node-643b20803253-3fa2b4da"><img src="images/svajunas-sirmelis-logo.svg" height="100" alt="svajunas sirmelis logo" data-w-id="2670c39a-81bb-8d0c-7552-71acaa4d6996" style="opacity:0" /></div>
                 </div>
                 <div data-w-id="63f2b76c-4f0b-8333-105a-7ddfd28c9a0c" style="opacity:0" class="footer-content">
                     <div id="w-node-50263f0943d5-3fa2b4da">
