--- a/index.html
+++ b/index.html
@@ -50,9 +50,8 @@
                 <nav role="navigation" class="w-nav-menu">
                     <div class="nav-menu-items"><a href="#projects" class="nav-item w-nav-link">PROJECTS</a><a href="#contact" class="nav-item w-nav-link">CONTACT</a>
                         <div class="social-buttons">
-                            <a href="https://www.facebook.com/svajunas.sirmelis" target="_blank" class="social-button w-inline-block"></a>
+                            <a href="https://youtube.com/user/ssvajiss" target="_blank" class="social-button w-inline-block"></a>
                             <a href="https://www.instagram.com/svajis/" target="_blank" class="social-button instagram w-inline-block"></a>
-                            <a href="https://youtube.com/user/ssvajiss/" target="_blank" class="social-button youtube w-inline-block"></a>
                         </div>
                     </div>
                 </nav>
