--- a/index.html
+++ b/index.html
@@ -105,13 +105,13 @@
                     
                     <div class="slide w-slide">
                         <div style="padding-top:56.27659574468085%" id="w-node-fe3336b66ffb-3fa2b4da" class="w-video w-embed">
-                            <iframe width="560" height="315" src="https://youtu.be/ndOH3n63XiY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                            <iframe width="560" height="315" src="https://www.youtu.be/embed/ndOH3n63XiY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                         </div>
                     </div>
 
                        <div class="slide w-slide">
                         <div style="padding-top:56.27659574468085%" id="w-node-fe3336b66ffb-3fa2b4da" class="w-video w-embed">
-                            <iframe width="560" height="315" src="https://youtu.be/oq90MOjlUE4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                            <iframe width="560" height="315" src="https://youtu.be/embed/oq90MOjlUE4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                         </div>
                     </div>
                     
