--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             <div data-w-id="ef6a57dd-eb2f-8881-d7af-c5549dcef88f" style="width:0%" class="divider-big">
                 <div data-w-id="701c0ffa-ba09-a3b3-5d24-2fa82b41c871" style="width:0PX" class="divider-small"></div>
             </div>
-            <div data-animation="slide" data-easing="ease-in-out-cubic" data-nav-spacing="6" data-duration="1750" data-w-id="ef5aef04-ace6-7302-a606-aa110c091abb" style="opacity:0;-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)" class="slider w-slider">
+            <div data-animation="slide" data-easing="ease-in-out-cubic" data-nav-spacing="6" data-duration="750" data-w-id="ef5aef04-ace6-7302-a606-aa110c091abb" style="opacity:0;-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)" class="slider w-slider">
                 <div class="slider-mask w-slider-mask">
                     
                     <div class="slide w-slide">
@@ -143,7 +143,7 @@
                         <div style="padding-top:56.27659574468085%" id="w-node-fe3336b66ffb-3fa2b4da" class="w-video w-embed">
                             <iframe width="560" height="315" src="https://youtube.com/embed/cOsld541SSA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                         </div>
-                    </div>c
+                    </div>
                     
                      <div class="slide w-slide">
                         <div style="padding-top:56.27659574468085%" id="w-node-fe3336b66ffb-3fa2b4da" class="w-video w-embed">
