--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta content="SIRMELIS" name="description">
     <meta content="" property="og:title">
     <meta content="Svajūnas Širmelis | Videography" property="og:description">
-    <meta content="" property="og:image">
+    <meta content="images/favicon.png" property="og:image">
     <meta content="summary" name="twitter:card">
     <meta content="width=device-width, initial-scale=1" name="viewport">
     <meta name="theme-color" content="#1B1B1D">
