--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                             document.write(year)
 
                             </script></div>
-                        <div id="w-node-9477e10b8a0c-3fa2b4da" class="hero-text-bottom">MAIL ME: <a href="mailto:svajunas@sirmelis.com" class="link">SVAJUNAS@SIRMELIS.COM</a></div>
+                        <div id="w-node-9477e10b8a0c-3fa2b4da" class="hero-text-bottom">MAIL ME: <a href="mailto:svajunas@sirmelis.lt" class="link">SVAJUNAS@SIRMELIS.LT</a></div>
                     </div>
                 </div>
             </div>
@@ -256,7 +256,7 @@
                 <div class="contact-content">
                     <div id="w-node-dcb9ab447bb5-3fa2b4da">
                         <div data-w-id="5af86387-682d-c89a-ba47-d0408c9b2b37" style="opacity:0;-webkit-transform:translate3d(0, 20PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 20PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 20PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 20PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)" class="contact-text">T. <a href="tel:+37065448057" class="link contact-link">+370 654 48057</a></div>
-                        <div data-w-id="b3a0c1d7-745d-970a-744e-028c4ddd57dc" style="opacity:0;-webkit-transform:translate3d(0, 20PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 20PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 20PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 20PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)" class="contact-text email">E. <a href="mailto:svajunas@sirmelis.com" class="link contact-link">svajunas@sirmelis.com</a></div>
+                        <div data-w-id="b3a0c1d7-745d-970a-744e-028c4ddd57dc" style="opacity:0;-webkit-transform:translate3d(0, 20PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 20PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 20PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 20PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)" class="contact-text email">E. <a href="mailto:svajunas@sirmelis.lt" class="link contact-link">svajunas@sirmelis.lt</a></div>
                     </div>
                     <div id="w-node-643b20803253-3fa2b4da"><img src="images/svajunas-sirmelis-logo.svg" height="16" alt="svajunas sirmelis logo" data-w-id="2670c39a-81bb-8d0c-7552-71acaa4d6996" style="opacity:0" /></div>
                 </div>
